@@ -1,3 +1,6 @@
+[B]v0.3.1 (6-06-2014):[/B]
+-Fix load_local_torrents for windows (tks azirus)
+
 [B]v0.3.1 (5-06-2014):[/B]
 -Added support for local .torrent files (+menu entry)
 
